--- a/css/estilo_quiz.css
+++ b/css/estilo_quiz.css
@@ -1,7 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
 
+#img_questao{
+  display:block;
+  width: 585px;
+  margin-bottom: 5px;
+  text-align:center;
+}
+
 .question h1{
-  font-size: 19px;
+  font-size: 16px;
+  color:black;
+  line-height: 1.4;
 }
 .question {
   width: 100%;
@@ -50,7 +59,7 @@
 
 .quizArea{
  width: 60%;
- height: 80%;
+ height: 95%;
  position: relative;
  text-align: center;
  background: #7aa4a9;
@@ -70,14 +79,15 @@
 }
 
 .multipleChoiceQues{
-  width:90%;
-  margin: auto;
-  padding: 0px;
+  width:100%;
+  margin: 0px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .quizBox
 {
-	width:90%;
-	margin: auto;
+	width:100%;
+  top: 50px;
 }
 
 .question{
@@ -85,16 +95,35 @@
   font-size: 0.8em;
   text-align: justify;
   text-justify: inter-word;
+  padding-bottom: 0px;
 }
+
+.answerOptions{
+  width:100%;
+  text-align: left;
+}
+
+#optionList{
+  width:100%;
+  padding-left: 5px;
+}
+
+.myoptions {
+  margin: 0 20px 0px 0;
+  font-size:15px;
+  vertical-align: middle;
+  padding-top: 3px;
+}
+
 
 .buttonArea
 {
 	text-align: right;
 	height: 4.5em;
   position:absolute;
-    bottom:10px;
-    right:30px;
-    left:0px;
+  bottom:-5px;
+  right:15px;
+  left:0px;
 }
 
 button {
@@ -137,7 +166,7 @@ button {
   margin: 40px auto 0rem;
   width: 50%;
   max-width: 950px;
-  margin-bottom: 50px;
+  top:-30px;
 }
 
 progress {
@@ -316,7 +345,7 @@ li {
 	height:30px;
 }
 .quiz label{
-	color: #fff;
+	color: black;
 }
 
 /*bolinha alternativas*/
@@ -356,7 +385,7 @@ input[type="radio"] {
     height: 25px;
     left: -3px;
     top: 2px;
-    border: 5px solid #fff ;
+    border: 5px solid #383e56 ;
     opacity: 0;
     border-radius: 50%;
 }
